# lodestar

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: lodestar-mcp-stdio
src/lodestar/: __init__.py  analyzer.py  capture.py  cli.py  config.py  embedder.py  indexer.py  mcp_server.py  models.py  pack.py  parsers.py  repo_config.py  storage.py  utils.py
tests/: test_lodestar.py
