[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lodestar-context"
version = "0.2.1"
description = "Local-first repository context tool for LLM agents — MCP server with SQLite/FTS5 index, symbol-aware ranking, token-budgeted packs, and durable memory."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Kostya Dudin", email = "duke40k@gmail.com" }
]
license = { text = "MIT" }
keywords = ["agents", "mcp", "sqlite", "indexing", "context", "claude", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/kostyadudin/lodestar"
Repository = "https://github.com/kostyadudin/lodestar"
Issues = "https://github.com/kostyadudin/lodestar/issues"
Changelog = "https://github.com/kostyadudin/lodestar/blob/main/CHANGELOG.md"

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0",
]
parsers = [
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-ruby>=0.23",
  "tree-sitter-php>=0.23",
]

[project.scripts]
lodestar = "lodestar.cli:main"
lodestar-mcp = "lodestar.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
